# Petshop

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DATN.md  DESIGN.md  README.md  docker-compose.prod.yml  docker-compose.yml  feature_proposals.md  patch.py
backend/: .env.example  Dockerfile  README.md  entrypoint.sh  langgraph.json  pyproject.toml
backend/.langgraph_api/: .langgraph_ops.pckl
backend/alembic/: env.py
backend/alembic/versions/: 1dd21b60d85b_add_sepay_to_paymentmethodenum.py  291e93f9d8db_add_trigram_gin_indexes_to_products.py  2f6a8b9c0d1e_add_service_knowledge_categories.py  31c6117f2a00_phase1_sme_production.py  5c2d8f9a1b3e_add_forum_qna.py  6043a509c6ec_init_tables.py  6b7c8d9e0f12_forum_thread_ai_flow.py  6ffc25efce3e_create_wishlist_items_table.py  (+18 more)
backend/app/: database.py  main.py
backend/scripts/: crawl_data.ipynb  embed_knowledge.py  embed_products.py  eval_questions.json  evaluate_ai.py  report_langsmith_metrics.py  seed_db.py  seed_knowledge.py  seed_products.py
backend/tests/: conftest.py  helpers.py  test_admin.py  test_ai_evaluator.py  test_ai_safety.py  test_alerts.py  test_auth.py  test_cache.py  test_cart.py  test_categories.py  test_chat.py  test_cohere_rerank.py  test_forum.py  test_hitl.py  test_order_code.py  test_orders.py  test_payments.py  test_payments_proxy.py  test_pets.py  test_phase0_hardening.py  test_phase1_features.py  test_product_suitability.py  test_products.py  test_reviews.py  test_security_startup.py  test_sepay.py  test_similar_products_optimization.py  test_validation_contracts.py
(+312 files in other folders)
