[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "cloudinary>=1.44.2",
    "fastapi>=0.110.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.14",
    "langchain-postgres>=0.0.15",
    "langgraph>=1.1.6",
    "psycopg[binary]>=3.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.2.5,<0.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.29.0",
    "fastapi-mail>=1.6.2",
    "langgraph-cli[inmem]>=0.4.30",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "faker>=40.13.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
